<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">シンデレラギャラリー</string>
    <string name="url_poringsoft">http://www.poringsoft.net/?page_id=1433</string>
    <string name="url_official">http://sp.pf.mbga.jp/12008305</string>
    <string name="url_download_data">https://github.com/mryp/imascggallery-data/archive/master.zip</string>

    <!-- メニュー文字列 -->
    <string name="action_settings">設定</string>
    <string name="action_update">更新</string>
    <string name="action_search">検索</string>
    <string name="action_sort">並び替え</string>
    <string name="action_sort_rowid">登録順</string>
    <string name="action_sort_name">名前順</string>
    <string name="action_sort_kana">よみがな順</string>
    <string name="action_sort_age_asc">年齢（昇順）</string>
    <string name="action_sort_age_desc">年齢（降順）</string>
    <string name="action_sort_height_asc">身長（昇順）</string>
    <string name="action_sort_height_desc">身長（降順）</string>
    <string name="action_sort_weight_asc">体重（昇順）</string>
    <string name="action_sort_weight_desc">体重（降順）</string>
    <string name="action_sort_bust_asc">バスト（昇順）</string>
    <string name="action_sort_bust_desc">バスト（降順）</string>
    <string name="action_sort_waist_asc">ウエスト（昇順）</string>
    <string name="action_sort_waist_desc">ウエスト（降順）</string>
    <string name="action_sort_hip_asc">ヒップ（昇順）</string>
    <string name="action_sort_hip_desc">ヒップ（降順）</string>
    <string name="action_bookmark">お気に入り</string>
    <string name="action_share">共有</string>
    <string name="action_show_profile">プロフィール表示</string>
    <string name="action_copy_url">画像URLをコピー</string>
    <string name="action_jump_official">公式サイトを表示</string>

    <!-- 検索文字列 -->
    <string name="search_title">アイドル名検索</string>
    <string name="search_hint">アイドル名またはよみがな</string>
</resources>
