<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_bookmark_outline" android:title="@string/action_bookmark"
        app:showAsAction="always" android:icon="@drawable/ic_star_outline_white_24dp" />
    <item android:id="@+id/action_bookmark" android:title="@string/action_bookmark"
        app:showAsAction="always" android:icon="@drawable/ic_star_white_24dp" />
    <item android:id="@+id/action_show_profile" android:title="@string/action_show_profile"
        app:showAsAction="never" android:icon="@drawable/ic_person_white_24dp" />
    <item android:id="@+id/action_share" android:title="@string/action_share"
        app:showAsAction="never" android:icon="@drawable/ic_share_white_24dp" />
</menu>
